# GlobVPN

./: CMakeLists.txt  README.md  build.sh  config.json  globvpn.cpp  globvpn.hpp  main.cpp
